# dumb_money

./: .env.example  .gitignore  README.md  framework.md  function_guide_and_implementation.md  implementation_roadmpa.md  pyproject.toml
docs/: architecture.md  data_models.md  data_sources.md  decision_brief_template.md  e2e_flow.md  final_research_summary_prompt.md  gold_layer_mart_refactor_execution_prompt.md  gold_layer_stock_analysis_proposal.md  gold_layer_ticker_metrics_mart_prompt.md  growth_profitability_prompt.md  peer_positioning_prompt.md  project_plan.md  score_decomposition_prompt.md  sql_gold_layer_implementation_plan.md  stock_scorecard_spec.md  stock_scorecard_visual_narrative_spec.md  universe_ingestion_checklist.md  workflows.md
docs/archive/: growth_profitability_prompt.md  implementation_roadmap.md  peer_positioning_prompt.md  tool_overview_analysis.md
notebooks/02_company_research/: aapl_company_research.ipynb
notebooks/03_sector_research/: aapl_sector_peer_research.ipynb
notebooks/04_portfolio_fit/: portfolio_fit_workflow.ipynb
src/dumb_money/: __init__.py  _matplotlib.py  universe.py
tests/: test_models.py  test_ticker_universe_selection.py
tests/analytics/: test_company.py  test_portfolio.py  test_scorecard.py
tests/cli/: test_main.py  test_stage_main.py
tests/ingestion/: test_baskets.py  test_benchmarks.py  test_fundamentals.py  test_portfolios.py  test_prices.py  test_universe.py
tests/outputs/: test_balance_sheet_strength_section.py  test_company_report.py  test_final_research_summary_section.py  test_valuation_section.py  (+6 more)
(+68 files in other folders)
